# ableton-mcp-extended

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: smoke.yml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: server.py
