[project]
name = "ableton-mcp-extended"
version = "1.1.0"
description = "Extended Ableton Live MCP bridge with broader telemetry and command passthrough"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Bella Wang"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
ableton-mcp-extended = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/Kbediako/ableton-mcp-extended"
"Bug Tracker" = "https://github.com/Kbediako/ableton-mcp-extended/issues"
